pufferlib/ocean/tower_climb/tower_climb.h

//logs
#define LOG_BUFFER_SIZE 1024
typedef struct Level Level;
struct Level {
    const int* map;
    int rows;
    int cols;
    int size;
    int total_length;
    int goal_location;
    int spawn_location;
};
typedef struct PuzzleState PuzzleState;
struct PuzzleState {
    unsigned char blocks[BLOCK_BYTES];
    int robot_position;
    int robot_orientation;
    int robot_state;
    int block_grabbed;
};
typedef struct Log Log;
struct Log {
    float episode_return;
    float episode_length;
    float rows_cleared;
    float levels_completed;
};
typedef struct LogBuffer LogBuffer;
struct LogBuffer {
    Log* logs;
    int length;
    int idx;
};
LogBuffer* allocate_logbuffer(int size) {
    LogBuffer* logs = (LogBuffer*)calloc(1, sizeof(LogBuffer));
    logs->logs = (Log*)calloc(size, sizeof(Log));
    logs->length = size;
    logs->idx = 0;
    return logs;
}
void free_logbuffer(LogBuffer* buffer) {
    free(buffer->logs);
    free(buffer);
}
Log aggregate_and_clear(LogBuffer* logs) {
    Log log = {0};
    if (logs->idx == 0) return log;  // Avoid division by zero

    for (int i = 0; i < logs->idx; i++) {
        log.episode_return  += logs->logs[i].episode_return  / logs->idx;
        log.episode_length  += logs->logs[i].episode_length  / logs->idx;
        log.rows_cleared    += logs->logs[i].rows_cleared    / logs->idx;
	log.levels_completed += logs->logs[i].levels_completed / logs->idx;
    }

    logs->idx = 0;
    return log;
}
typedef struct CTowerClimb CTowerClimb;
struct CTowerClimb {
    float* observations;
    int* actions;
    float* rewards;
    unsigned char* dones;
    LogBuffer* log_buffer;
    Log log;
    float score;
    int map_choice;
    Level level;
    PuzzleState state;  // Contains blocks bitmask, position, orientation, etc.
    int level_number;
    int distance_to_goal;
    float reward_climb_row;
    float reward_fall_row;
    float reward_illegal_move;
    float reward_move_block;
    float reward_distance;
};
void init(CTowerClimb* env) {
    env->level_number = 0;
    env->level = levels[env->level_number];
    
    // Initialize PuzzleState
    levelToPuzzleState(&env->level, &env->state);
    printf("state: %d\n", env->state.robot_position);   
    printf("level: %d\n", env->level.goal_location);
}
void free_allocated(CTowerClimb* env) {
    free(env->actions);
    free(env->observations);
    free(env->dones);
    free(env->rewards);
    free_logbuffer(env->log_buffer);
    free_initialized(env);
}
void reset(CTowerClimb* env) {
    env->log = (Log){0};
    env->dones[0] = 0;
    env->level_number = 0;
    env->level = levels[env->level_number];
    levelToPuzzleState(&env->level, &env->state);
    compute_observations(env);
}
void step(CTowerClimb* env) {
    env->log.episode_length += 1.0;
    env->rewards[0] = 0.0;
    // if(env->log.episode_length >200){
	//        env->rewards[0] = 0;
	//        //env->log.episode_return +=0;
	//        add_log(env->log_buffer, &env->log);
	//        reset(env);
    // }
    // Create next state
    PuzzleState nextState = env->state;
    int move_result = applyAction(&nextState, env->actions[0], &env->level, RL_MODE, env);
    
    if (move_result == MOVE_ILLEGAL) {
        illegal_move(env);
        return;
    }
    if (move_result == MOVE_DEATH){
        death(env);
        return;
    }
    
    // Update state
    env->state = nextState;
    
    // Check for goal state
    if (isGoal(&env->state, &env->level)) {
        next_level(env);
    }
    
    // Update observations
    compute_observations(env);
    // if(action != NOOP){
    //     print_observation_window(env);
    // }
}
typedef struct BFSNode {
    PuzzleState state;
    int depth;      // how many moves from start
    int parent;     // index in BFS array of who generated me
    int action;     // which action led here (if you want to reconstruct the path)
} BFSNode;
static BFSNode* queueBuffer = NULL;
typedef enum {
    ANIM_IDLE,
    ANIM_RUNNING,
    ANIM_CLIMBING,
    ANIM_HANGING,
    ANIM_START_GRABBING,
    ANIM_GRABBING,
    ANIM_SHIMMY_RIGHT,
    ANIM_SHIMMY_LEFT,
} AnimationState;
typedef struct Client Client;
struct Client {
    float width;
    float height;
    Texture2D puffers;
    Texture2D background;
    Camera3D camera;
    Model robot;
    Light lights[MAX_LIGHTS];
    Shader shader; 
    ModelAnimation* animations;
    int animFrameCounter;
    AnimationState animState;
    int previousRobotPosition;
    Vector3 visualPosition;
    Vector3 targetPosition;
    bool isMoving;
    float moveProgress;
    Model cube;
    float scale;
};
Client* make_client(CTowerClimb* env) {
    printf("Raylib version: %s\n", RAYLIB_VERSION);
    printf("OpenGL version: %d\n", rlGetVersion());

    Client* client = (Client*)calloc(1, sizeof(Client));
    client->width = 1600;
    client->height = 900;
    SetConfigFlags(FLAG_MSAA_4X_HINT);  // Enable MSAA
    InitWindow(client->width, client->height, "PufferLib Ray Tower Climb");
    SetTargetFPS(60);
    // camera
    client->camera = (Camera3D){ 0 };
    client->camera.position = (Vector3){ 0.0f, 25.0f, 20.0f };  // Move camera further back and higher up
    client->camera.target = (Vector3){ 2.0f, 4.0f, 2.0f };     // Keep looking at same target point
    client->camera.up = (Vector3){ 0.0f, 1.0f, 0.0f };
    client->camera.fovy = 45.0f;
    client->camera.projection = CAMERA_PERSPECTIVE;
    // load background
    client->background = LoadTexture("resources/tower_climb/space2.jpg");
    client->puffers = LoadTexture("resources/puffers_128.png");
    // load robot & cube models
    client->robot = LoadModel("resources/tower_climb/small_astro.glb");
    client->cube = LoadModel("resources/tower_climb/spacerock.glb");
    BoundingBox bounds = GetModelBoundingBox(client->cube);
    float cubeSize = bounds.max.x - bounds.min.x;
    float scale = 1.0f / cubeSize;
    client->scale = scale; 
    int animCount = 0;
    client->animations = LoadModelAnimations("resources/tower_climb/small_astro.glb", &animCount);
    printf("Loaded %d animations\n", animCount);
    client->animState = ANIM_IDLE;
    client->animFrameCounter = 0;
    UpdateModelAnimation(client->robot, client->animations[4], 0); 
    // Load and configure shader
    char vsPath[256];
    char fsPath[256];
    sprintf(vsPath, "resources/tower_climb/shaders/gls%i/lighting.vs", GLSL_VERSION);
    sprintf(fsPath, "resources/tower_climb/shaders/gls%i/lighting.fs", GLSL_VERSION);
    client->shader = LoadShader(vsPath, fsPath);
    // Get shader locations
    client->shader.locs[SHADER_LOC_VECTOR_VIEW] = GetShaderLocation(client->shader, "viewPos");
    // Set up ambient light
    int ambientLoc = GetShaderLocation(client->shader, "ambient");
    float ambient[4] = { 0.1f, 0.1f, 0.1f, 1.0f };
    SetShaderValue(client->shader, ambientLoc, ambient, SHADER_UNIFORM_VEC4);
    
    // apply lighting shader
    client->robot.materials[0].shader = client->shader;
    client->cube.materials[0].shader = client->shader;
    // Create lights with much brighter colors and closer positions
    client->lights[0] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 7.0f, 5.0f },  // Front
        Vector3Zero(), 
        WHITE,  // ~12% intensity
        client->shader);
    
    // Very dim fill lights
    client->lights[1] = CreateLight(LIGHT_POINT, 
        (Vector3){ 3.0f, 5.0f, 8.0f },  // Right side
        Vector3Zero(), 
        (Color){ 40, 40, 40, 255 },  // ~15% intensity
        client->shader);
    
    client->lights[2] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 7.0f, 5.0f },  // Front
        Vector3Zero(), 
        (Color){ 30, 30, 30, 255 },  // ~12% intensity
        client->shader);
    
    client->lights[3] = CreateLight(LIGHT_POINT, 
        (Vector3){ 10.0f, 6.0f, -5.0f },  // Left side
        Vector3Zero(), 
        (Color){ 20, 20, 20, 255 },  // ~8% intensity
        client->shader);

    // Make sure both models' materials use the lighting shader
    for (int i = 0; i < client->robot.materialCount; i++) {
        client->robot.materials[i].shader = client->shader;
    }
    for (int i = 0; i < client->cube.materialCount; i++) {
        client->cube.materials[i].shader = client->shader;
    }
    client->animState = ANIM_IDLE;
    client->previousRobotPosition = env->state.robot_position;
    
    // Initialize visual position to match starting robot position
    int floor = env->state.robot_position / env->level.size;
    int grid_pos = env->state.robot_position % env->level.size;
    int x = grid_pos % env->level.cols;
    int z = grid_pos / env->level.cols;
    
    client->visualPosition = (Vector3){ 
        x * 1.0f,
        floor * 1.0f,
        z * 1.0f
    };
    client->targetPosition = client->visualPosition;  // Initialize target to match
    
    return client;
}
void render(Client* client, CTowerClimb* env) {
    if (IsKeyDown(KEY_ESCAPE)) exit(0);
    static int previous_orientation = -1;  // Track orientation changes
    
    // Handle orientation changes while hanging
    if (env->state.robot_orientation != previous_orientation && 
        env->state.robot_state == HANGING) {
        
        // First remove the old orientation's offset
        if (previous_orientation != -1) {
            // Temporarily set orientation back to apply reverse offset
            int temp_orientation = env->state.robot_orientation;
            env->state.robot_orientation = previous_orientation;
            orient_hang_offset(client, env, -1);  // Remove old offset
            env->state.robot_orientation = temp_orientation;
        }
        // Now apply the new orientation's offset
        orient_hang_offset(client, env, 1);  // Apply new offset
        previous_orientation = env->state.robot_orientation;
    }
    // Handle state transitions - drop animation
    if (env->state.robot_state == DEFAULT && client->animState == ANIM_HANGING) {
        update_animation(client, ANIM_IDLE);
        client->isMoving = false;
        client->visualPosition = client->targetPosition;
    }
    // grab animation
    if (env->state.block_grabbed != -1 && 
        client->animState != ANIM_GRABBING && 
        client->animState != ANIM_START_GRABBING) {
        update_animation(client, ANIM_START_GRABBING);
        client->isMoving = true;
    } else if (env->state.block_grabbed == -1 && client->animState == ANIM_GRABBING) {
        update_animation(client, ANIM_IDLE);
    }

    // Handle position changes
    if (env->state.robot_position != client->previousRobotPosition) {
        if (client->isMoving) client->visualPosition = client->targetPosition;
        client->isMoving = true;
        update_position(client, env);

        float verticalDiff = client->targetPosition.y - client->visualPosition.y;
        if (verticalDiff > 0.5) {
            orient_hang_offset(client, env, client->animState == ANIM_HANGING ? 0 : 1);
            update_animation(client, ANIM_CLIMBING);
        } else if (env->state.robot_state == HANGING) {
            handle_hanging_movement(client, env);
        } else {
            update_animation(client, verticalDiff < 0 ? ANIM_IDLE : ANIM_RUNNING);
            if (verticalDiff < 0) {
                client->isMoving = false;
                client->visualPosition = client->targetPosition;
            }
        }
        
        client->previousRobotPosition = env->state.robot_position;
    }

    process_animation_frame(client, env);
    update_camera(client, env);
    render_scene(client, env);
}
void close_client(Client* client) {
    UnloadShader(client->shader);
    CloseWindow();
    UnloadModel(client->robot);
    free(client);
}